[package]
name = "hui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
ratatui = "0.20"
unicode-width = "0.1.10"
regex = "1.5.5"
copypasta = "0.8.2"
itertools = "0.10.5"
fuzzy-matcher = "0.3.7"
